mobile responsivenes  done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
       @import url("https://fonts.cdnfonts.com/css/segoe-ui-4");
     </style>
+    <link rel="stylesheet" href="./mobile.css">
   </head>
   <body>
     <div class="majorContainer">
@@ -64,6 +65,7 @@
         </div>
       </div>
       <div class="card2">
+        
         <div class="header2">
           <h2>sign up</h2>
           <button>Join Us</button>
@@ -90,7 +92,6 @@
           </div>
           <div class="line"></div>
         </div>
-
         <div class="bigImageHolder">
             <q>Go anywhere you want in a <br> Galaxy full of wonders!</q>
             <div class="arrowCont">
@@ -100,5 +101,11 @@
         </div>
       </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
   </body>
 </html>
